# VacancyParser

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: config.py
src/application/: usecase.py
src/domain/: entity.py
src/infrastructure/: notifier.py  parser.py  validator.py
src/interfaces/: notifier.py  parser.py  validator.py
src/utils/: make_session.py
