[project]
name = "vacancyparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Starobogatov Alexey",email = "Starobogatov.A@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, < 4.0"
dependencies = [
    "pyrogram (>=2.0.106,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "tgcrypto (>=1.2.5,<2.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "yandex-cloud-ml-sdk (>=0.12.0,<0.13.0)",
    "pyrotgfork (>=2.2.12,<3.0.0)",
    "kurigram (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
